--- a/style.css
+++ b/style.css
@@ -1,30 +1,38 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
-body{
+body {
     background-color: white;
 }
 
-img{
+h1 {
+    color: gray;
+    padding: 10px;
+}
+
+img {
     width: 100%;
 }
 
-.container{
-    margin: 0;
-    max-width: 1000px;
-    min-width: 250px;
+p {
+    color: gray;
 }
 
-.item-list{
+.container {
+    max-width: 1200px;
+    min-width: 320px;
+}
+
+.item-list {
     display: flex;
     flex-wrap: wrap;
 }
-
-.item{
-   padding: 10px;
+.item {
+    padding: 10px;
+    color: black;
 }
 
 @media (min-width: 36em) {
